--- a/bit_cheer_queue.html
+++ b/bit_cheer_queue.html
@@ -279,7 +279,7 @@
           .map((message) => JSON.stringify(message))
           .join("\n");
         try {
-          const response = await fetch("http://localhost:3000/update_json", {
+          const response = await fetch("ir-cbackend-is6ivecuc-anthonyismes-projects.vercel.app", {
             method: "POST",
             headers: {
               "Content-Type": "application/json",
