--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
       async function loadCheerQueue() {
         try {
-          const response = await fetch("cheer_log.json");
+          const response = await fetch("https://ir-cbackend.vercel.app/cheer_log.json");
           const cheerData = await response.text();
           cheerMessages = cheerData
             .split("\n")
@@ -279,7 +279,7 @@
           .map((message) => JSON.stringify(message))
           .join("\n");
         try {
-          const response = await fetch("https://ir-cbackend.vercel.app/", {
+          const response = await fetch("https://ir-cbackend.vercel.app/cheer_log.json", {
             method: "POST",
             headers: {
               "Content-Type": "application/json",
