--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
       async function loadCheerQueue() {
         try {
-          const response = await fetch("https://ir-cbackend.vercel.app/cheer_log.json");
+          const response = await fetch("https://pointed-fluttering-rubidium.glitch.me/cheer_log.json");
           const cheerData = await response.text();
           cheerMessages = cheerData
             .split("\n")
